--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.atguigu.android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Atguigu2">
+        android:theme="@style/Theme.Atguigu2"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +24,13 @@
         <activity android:name="MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden">
         </activity>
+        
+        <activity
+            android:name=".activity.OKHttpActivity"
+            android:launchMode="standard">
+
+        </activity>
+        <activity android:name=".activity.OKHttpListActivity" />
     </application>
 
 </manifest>
